# quadruped_ros2_control

./: readme.md
jpos_initializer_controller/: CMakeLists.txt  jpos_initializer_controller.xml  package.xml
jpos_initializer_controller/include/jpos_initializer_controller/: jpos_initializer.hpp  visibility_control.h
jpos_initializer_controller/launch/: gazebo_load_controller.launch.py
jpos_initializer_controller/src/: jpos_initializer.cpp
jpos_initializer_controller/test/: test_load_jpos_initializer.cpp
lango_imu_hardware_interface/: CMakeLists.txt  lango_imu_hardware_interface.xml  package.xml
lango_imu_hardware_interface/include/lango_imu_hardware_interface/: lango_imu_hardware_interface.hpp  visibility_control.h
lango_imu_hardware_interface/src/: lango_imu_hardware_interface.cpp
lango_imu_hardware_interface/test/: test_lango_imu_hardware_interface.cpp  test_read.cpp
odrive_cansimple_hardware_interface/: CMakeLists.txt  odrive_cansimple_hardware_interface.xml  package.xml
odrive_cansimple_hardware_interface/include/odrive_cansimple_hardware_interface/: cansimple_hardware_interface.hpp  cansimple_protocol.hpp  socketcan.hpp  visibility_control.h
odrive_cansimple_hardware_interface/src/: cansimple_hardware_interface.cpp  socketcan.cpp
odrive_cansimple_hardware_interface/test/: fake_resource_manager.cpp  pos_control.cpp  test_cansimple_hardware_interface.cpp  torque_control.cpp  vel_control.cpp
odrive_hardware_interface/: CMakeLists.txt
odrive_hardware_interface/src/: odrive_hardware_interface.cpp
odrive_hardware_interface/test/: libusb_asyc.cpp
quadruped_controllers/: CMakeLists.txt  locomotion_controller.xml  package.xml  quadruped_controllers.xml  stand_up_controller.xml  swing_stance_controller.xml
quadruped_controllers/include/quadruped_controllers/: controller_base.hpp  foot_swing_trajectory.hpp  gait.hpp  leg_controller.hpp  locomotion_controller.hpp  mpc_controller.hpp  mpc_formulation.hpp  mpc_solver.hpp  pinocchio_solver.hpp  quadruped_interface.hpp  quadruped_types.hpp  ros2_node_interface.hpp  stand_up_controller.hpp  state_update.hpp  swing_stance_controller.hpp  utils.hpp  visibility_control.h
quadruped_controllers/launch/: locomotion.launch.py
quadruped_controllers/src/: controller_base.cpp  foot_swing_trajectory.cpp  locomotion_controller.cpp  mpc_controller.cpp  mpc_formulation.cpp  pinocchio_solver.cpp  ros2_node_interface.cpp  stand_up_controller.cpp  state_update.cpp  swing_stance_controller.cpp
quadruped_controllers/test/: formulation_test.cpp  solver_test.cpp  state_update.cpp  test_controller_base.cpp  test_controller_base.hpp  test_load_controller_base.cpp
quadruped_description/: CMakeLists.txt  package.xml
quadruped_description/launch/: view_gazebo.launch.py  view_ign.launch.py.deprecated  view_rviz.launch.py
quadruped_description/urdf/: mini_cheetah.urdf  quadruped.urdf.xacro
quadruped_description/urdf/common/: leg.xacro  material.xacro  pointer.xacro
quadruped_description/urdf/parsed_urdf/: mini_cheetah.urdf  test.urdf
quadruped_description/urdf/robot_const/: mini_cheetah.xacro
quadruped_description/urdf/ros_control/: cheetah_leg_interface.xacro  common_leg_interface.xacro  gazebo.xacro  transmission.xacro
quadruped_gazebo/: CMakeLists.txt  gazebo_cheetah_hardware_plugin.xml  package.xml
quadruped_gazebo/config/: controller_manager.yaml  gazebo_ros.yaml
quadruped_gazebo/include/quadruped_gazebo/: gazebo_cheetah_system.hpp  gazebo_system_private.hpp
quadruped_gazebo/launch/: load_gazebo_plugin_test.launch.py
quadruped_gazebo/src/: gazebo_cheetah_system.cpp
quadruped_gazebo/worlds/: empty.world
